[package]
name = "polygon-kml"
version = "0.1.0"
authors = ["David Barthelemy <davidbarthelemy28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
getopts = "0.2"
serde = "1"
serde_derive = "1"
regex = "1"
lazy_static = "1.4.0"